--- a/src/app/components/admin-panel/admin-panel.component.html
+++ b/src/app/components/admin-panel/admin-panel.component.html
@@ -103,155 +103,204 @@
     <img src="../../../assets/img/loading.gif">
   </div>
 
+
+
   <!-- TABLE TIMBRES -->
-  <table *ngIf="timbreList.length>0" class=" mb-5 table table-bordered table-striped">
-    <thead class="thead-dark">
-      <tr class="text-center">
-        <th>Catégorie</th>
-        <th>N°</th>
-        <th>Prix</th>
-        <th>Image</th>
-        <th>Quantité</th>
-        <th>État</th>
-        <th>Infos supp.</th>
-        <th>Année Coin Daté</th>
-        <th>Edit</th>
-        <th>Suppr.</th>
-      </tr>
-    </thead>
-    <tbody *ngIf="!loading">
-      <tr *ngFor="let timbre of timbreList; index as i">
-        <!-- TABLE TIMBRE CATEGORIE -->
-        <td>
-          <div *ngIf="editableTimbreId !== timbre.timbreId">
-            <p class="mb-0" *ngIf="timbre.catTimbre=='classic'">Classique</p>
-            <p class="mb-0" *ngIf="timbre.catTimbre == 'spe'">Spécial</p>
-            <p class="mb-0" *ngIf="timbre.catTimbre == 'tas'">Taxe Av Serv</p>
-            <p class="mb-0" *ngIf="timbre.catTimbre == 'cd'">Coin Daté</p>
-            <p class="mb-0" *ngIf="timbre.catTimbre == 'obl'">Oblitéré</p>
-          </div>
-          <div *ngIf="editableTimbreId === timbre.timbreId">
-            <select class="custom-select" [(ngModel)]="timbreForEdition.catTimbre">
-              <option value="classic">Classique</option>
-              <option value="spe">Spécial</option>
-              <option value="tas">Taxe Av Serv</option>
-              <option value="cd">Coin Daté</option>
-              <option value="obl">Oblitéré</option>
-            </select>
-          </div>
-        </td>
-        <!-- TABLE TIMBRE NUMERO -->
-        <td>
-          <div class="d-flex" *ngIf="editableTimbreId !== timbre.timbreId">
-            <p class="text-center mb-0 font-weight-bold">
-              {{timbre.numeroTimbre}}</p>
-            <p class="text-center mb-0 font-weight-bold">{{timbre.optionalInfos}}</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre == 'obl'">{{timbre.optionalInfos}}</p>
-          </div>
-          <div>
-            <input type="text" class="form-control table-input" [(ngModel)]="timbreForEdition.numeroTimbre"
-              *ngIf="editableTimbreId === timbre.timbreId" />
-          </div>
-        </td>
-        <!-- TABLE TIMBRE PRIX -->
-        <td>
-          <input *ngIf="editableTimbreId === timbre.timbreId" placeholder="Prix" type="number" step="0.01" min="0"
-            class="table-input form-control" aria-label="Prix" [(ngModel)]="timbreForEdition.prixTimbre">
-          <div *ngIf="editableTimbreId !== timbre.timbreId">{{ timbre.prixTimbre }}€</div>
-        </td>
-        <!-- TABLE IMG URL -->
-        <td class="px-0" style="width:20%">
-          <div *ngIf="editableTimbreId !== timbre.timbreId">
-            <a [href]="timbre.imageTimbreUrl" target="_blank">
-              <img [src]="timbre.imageTimbreUrl" class="">
-            </a>
-          </div>
-          <div>
-            <input *ngIf="editableTimbreId === timbre.timbreId" placeholder="URL" type="url"
-              class="form-control table-input" [(ngModel)]="timbreForEdition.imageTimbreUrl">
-          </div>
-        </td>
-        <!--TABLE TIMBRE QUANTITÉ -->
-        <td (blur)="updateTimbre(timbre)">
-          <div class="d-flex">
-            <button (click)="changeTimbreQte(timbre,'minus')" class="qteBtn" [disabled]=" timbre.quantiteTimbre==0">
-              <p>-</p>
-            </button>
-            <p>{{ timbre.quantiteTimbre }}</p>
-            <button (click)="changeTimbreQte(timbre,'plus')" class="qteBtn">
-              <p>+</p>
-            </button>
-          </div>
-        </td>
-        <!--TABLE  TIMBRE ÉTAT -->
-        <td>
-          <div *ngIf="editableTimbreId !== timbre.timbreId">
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='neuf'">Neuf</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">Charnière</p>
-            <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">Sans Gomme</p>
-          </div>
+  <div class="table table-striped">
+    <p-table #tt [value]="timbreList" *ngIf="timbreList.length>0">
+      <ng-template pTemplate="caption">
+        <div class="d-flex justify-content-between">
+          <p class="mb-0">LISTE DES TIMBRES</p>
+          <span class="p-input-icon-right">
+            <i class="pi pi-search"></i>
+            <input type="text" pInputText size="50" placeholder="Numéro Timbre" style="width:10rem;"
+              (input)="tt.filter($event.target.value, 'numeroTimbre', 'equals')">
+          </span>
+        </div>
+      </ng-template>
 
-          <div *ngIf="editableTimbreId === timbre.timbreId">
-            <select style="width:6em;" class="custom-select" [(ngModel)]="timbreForEdition.etatTimbre">
-              <option value="neuf">Neuf</option>
-              <option value="occas">Charnière</option>
-              <option value="sg">Sans Gomme</option>
-            </select>
-          </div>
+      <ng-template pTemplate="header">
+        <tr>
+          <th class="text-center tabHead" [style]="{'width':'10rem'}" [pSortableColumn]="'catTimbre'">Catégorie
+            <p-sortIcon [field]="'catTimbre'">
+            </p-sortIcon>
+          </th>
 
-        </td>
+          <th class="text-center tabHead" [style]="{'width':'6rem'}" [pSortableColumn]="'numeroTimbre'">N° <p-sortIcon
+              [field]="'numeroTimbre'">
+            </p-sortIcon>
+          </th>
 
-        <!-- TABLE TIMBRE OPTIONAL INFOS -->
-        <td style="width: 10%;">
-          <div *ngIf="editableTimbreId !== timbre.timbreId">
-            <p>{{timbre.optionalInfos}}</p>
-          </div>
-          <div *ngIf="editableTimbreId === timbre.timbreId">
-            <input placeholder="Infos supp" type="text" class="form-control table-input" aria-label="InfosSuppEdition"
-              [(ngModel)]="timbreForEdition.optionalInfos">
-          </div>
-        </td>
-        <!-- ANNEE COINS DATÉS -->
-        <td style="width: 10%;">
-          <div *ngIf="editableTimbreId !== timbre.timbreId">
-            <p>{{timbre.anneeCoinDate}}</p>
-          </div>
-          <div *ngIf="editableTimbreId === timbre.timbreId">
-            <input placeholder="Année" type="number" min="0" max="2999" class="form-control table-input"
-              aria-label="anneeCoinDateEdition" [(ngModel)]="timbreForEdition.anneeCoinDate">
-          </div>
-        </td>
-        <td>
-          <button *ngIf="editableTimbreId !== timbre.timbreId" class="btn btn-outline-info"
-            (click)="allowTimbreEdition(timbre)"><svg width="1em" height="1em" viewBox="0 0 16 16"
-              class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-              <path fill-rule="evenodd"
-                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-            </svg></button>
-          <div class="d-flex" *ngIf="editableTimbreId === timbre.timbreId">
-            <button id="editionValidation" class="btn btn-outline-success" (click)="updateTimbre(timbreForEdition)"><svg
-                width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
+          <th class="text-center tabHead" [style]="{'width':'6rem'}" [pSortableColumn]="'prixTimbre'">Prix <p-sortIcon
+              [field]="'prixTimbre'">
+            </p-sortIcon>
+          </th>
+          <th class="text-center tabHead">Image</th>
+          <th class="text-center tabHead" [style]="{'width':'10rem'}" [pSortableColumn]="'quantiteTimbre'">Quantité
+            <p-sortIcon [field]="'quantiteTimbre'">
+            </p-sortIcon>
+          </th>
+          <th class="text-center tabHead" [style]="{'width':'10rem'}" [pSortableColumn]="'etatTimbre'">État <p-sortIcon
+              [field]="'etatTimbre'">
+            </p-sortIcon>
+          </th>
+          <th class="text-center tabHead" [style]="{'width':'10rem'}" [pSortableColumn]="'optionalInfos'">Infos supp.
+            <p-sortIcon [field]="'optionalInfos'">
+            </p-sortIcon>
+          </th>
+          <th class="text-center tabHead" [style]="{'width':'10rem'}" [pSortableColumn]="'anneeCoinDate'">Année CD
+            <p-sortIcon [field]="'anneeCoinDate'">
+            </p-sortIcon>
+          </th>
+          <th [style]="{'width':'5.5rem'}" class="text-center tabHead">Edit</th>
+          <th [style]="{'width':'5.5rem'}" class="text-center tabHead">Suppr.</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" *ngIf="!loading" let-timbre>
+        <tr>
+          <!-- TABLE TIMBRE CATEGORIE -->
+          <td>
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <p class="mb-0" *ngIf="timbre.catTimbre=='classic'">Classique</p>
+              <p class="mb-0" *ngIf="timbre.catTimbre == 'spe'">Spécial</p>
+              <p class="mb-0" *ngIf="timbre.catTimbre == 'tas'">Taxe Av Serv</p>
+              <p class="mb-0" *ngIf="timbre.catTimbre == 'cd'">Coin Daté</p>
+              <p class="mb-0" *ngIf="timbre.catTimbre == 'obl'">Oblitéré</p>
+            </div>
+            <div *ngIf="editableTimbreId === timbre.timbreId">
+              <select class="custom-select" [(ngModel)]="timbreForEdition.catTimbre">
+                <option value="classic">Classique</option>
+                <option value="spe">Spécial</option>
+                <option value="tas">Taxe Av Serv</option>
+                <option value="cd">Coin Daté</option>
+                <option value="obl">Oblitéré</option>
+              </select>
+            </div>
+          </td>
+          <!-- TABLE TIMBRE NUMERO -->
+          <td>
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <p class=" mb-0 font-weight-bold">
+                {{timbre.numeroTimbre}}</p>
+              <p class=" mb-0 font-weight-bold">{{timbre.optionalInfos}}</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre == 'obl'">{{timbre.optionalInfos}}</p>
+            </div>
+            <div>
+              <input type="text" class="form-control table-input" [(ngModel)]="timbreForEdition.numeroTimbre"
+                *ngIf="editableTimbreId === timbre.timbreId" />
+            </div>
+          </td>
+          <!-- TABLE TIMBRE PRIX -->
+          <td>
+            <input *ngIf="editableTimbreId === timbre.timbreId" placeholder="Prix" type="number" step="0.01" min="0"
+              class="table-input form-control" aria-label="Prix" [(ngModel)]="timbreForEdition.prixTimbre">
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              {{ timbre.prixTimbre }}€</div>
+          </td>
+          <!-- TABLE IMG -->
+          <td class="px-0" style="width:20%">
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <button (click)="showDialog(timbre)" class="invisible-button">
+                <img [src]="timbre.imageTimbreUrl">
+              </button>
+            </div>
+            <div>
+              <input *ngIf="editableTimbreId === timbre.timbreId" placeholder="URL" type="url"
+                class="form-control table-input" [(ngModel)]="timbreForEdition.imageTimbreUrl">
+            </div>
+          </td>
+          <!--TABLE TIMBRE QUANTITÉ -->
+          <td (blur)="updateTimbre(timbre)">
+            <div class="d-flex justify-content-center">
+              <button (click)="changeTimbreQte(timbre,'minus')" class="qteBtn" [disabled]=" timbre.quantiteTimbre==0">
+                <p>-</p>
+              </button>
+              <p class="mb-0">{{ timbre.quantiteTimbre }}</p>
+              <button (click)="changeTimbreQte(timbre,'plus')" class="qteBtn">
+                <p>+</p>
+              </button>
+            </div>
+          </td>
+          <!--TABLE  TIMBRE ÉTAT -->
+          <td>
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='neuf'">Neuf</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">Charnière</p>
+              <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">Sans Gomme</p>
+            </div>
+
+            <div *ngIf="editableTimbreId === timbre.timbreId">
+              <select style="width:6em;" class="custom-select" [(ngModel)]="timbreForEdition.etatTimbre">
+                <option value="neuf">Neuf</option>
+                <option value="occas">Charnière</option>
+                <option value="sg">Sans Gomme</option>
+              </select>
+            </div>
+
+          </td>
+
+          <!-- TABLE TIMBRE OPTIONAL INFOS -->
+          <td style="width: 10%;">
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <p>{{timbre.optionalInfos}}</p>
+            </div>
+            <div *ngIf="editableTimbreId === timbre.timbreId">
+              <input placeholder="Infos supp" type="text" class="form-control table-input" aria-label="InfosSuppEdition"
+                [(ngModel)]="timbreForEdition.optionalInfos">
+            </div>
+          </td>
+          <!-- ANNEE COINS DATÉS -->
+          <td style="width: 10%;">
+            <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
+              <p>{{timbre.anneeCoinDate}}</p>
+            </div>
+            <div *ngIf="editableTimbreId === timbre.timbreId">
+              <input placeholder="Année" type="number" min="0" max="2999" class="form-control table-input"
+                aria-label="anneeCoinDateEdition" [(ngModel)]="timbreForEdition.anneeCoinDate">
+            </div>
+          </td>
+          <td class="d-flex justify-content-center">
+            <button *ngIf="editableTimbreId !== timbre.timbreId" class="btn btn-outline-info"
+              (click)="allowTimbreEdition(timbre)"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                 <path fill-rule="evenodd"
-                  d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
               </svg></button>
-            <button id="editionCancel" class="btn btn-outline-danger" (click)="abortEdition()">X</button>
-          </div>
+            <div class="d-flex" *ngIf="editableTimbreId === timbre.timbreId">
+              <button id="editionValidation" class="btn btn-outline-success"
+                (click)="updateTimbre(timbreForEdition)"><svg width="1em" height="1em" viewBox="0 0 16 16"
+                  class="bi bi-check2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd"
+                    d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+                </svg></button>
+              <button id="editionCancel" class="btn btn-outline-danger" (click)="abortEdition()">X</button>
+            </div>
 
-        </td>
-        <td>
-          <button type="button" (click)="deleteTimbreById(timbre)" class="btn btn-outline-danger"><svg width="1em"
-              height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd"
-                d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
-            </svg></button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          </td>
+          <td>
+            <div class="d-flex justify-content-center">
+              <button type="button" (click)="deleteTimbreById(timbre)" class="btn btn-outline-danger"><svg width="1em"
+                  height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill" fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd"
+                    d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
+                </svg></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+
+  <!-- MODAL AFFICHAGE TIMBRE PHOTO -->
+  <p-dialog [dismissableMask]="true" [modal]="true" header="Timbre N°{{selectedTimbre.numeroTimbre}}"
+    [(visible)]="display">
+    <div class="d-flex justify-content-center">
+      <img class="focusedStampImg" src="{{selectedTimbre.imageTimbreUrl}}">
+    </div>
+  </p-dialog>
