creation du panier pour devis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel') && !location.isCurrentPathEqualTo('/register')">
   </app-sidebar>
   <router-outlet></router-outlet>
+  <app-basket></app-basket>
   <app-arrow-to-top></app-arrow-to-top>
   <app-toast></app-toast>
 </div>
