--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,22 +18,22 @@
       </button>
     </div>
     <div><button class="d-flex" (click)="displayBasket()" id="basket-button" type="button">
-        <svg *ngIf="basketItemNumber === 0" width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bag-dash"
+        <svg *ngIf="basketItemsNumber === 0" width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bag-dash"
           fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd"
             d="M8 1a2.5 2.5 0 0 0-2.5 2.5V4h5v-.5A2.5 2.5 0 0 0 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5H2z" />
           <path fill-rule="evenodd" d="M5.5 10a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z" />
         </svg>
-        <svg *ngIf="basketItemNumber > 0" width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bag-check"
+        <svg *ngIf="basketItemsNumber > 0" width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-bag-check"
           fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd"
             d="M8 1a2.5 2.5 0 0 0-2.5 2.5V4h5v-.5A2.5 2.5 0 0 0 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5H2z" />
           <path fill-rule="evenodd"
             d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
         </svg>
-        <p *ngIf="basketItemNumber === 0">Panier: vide. :(</p>
-        <p *ngIf="basketItemNumber === 1">Panier: {{basketItemNumber}} article</p>
-        <p *ngIf="basketItemNumber > 1">Panier: {{basketItemNumber}} articles</p>
+        <p *ngIf="basketItemsNumber === 0">Panier: vide. :(</p>
+        <p *ngIf="basketItemsNumber === 1">Panier: {{basketItemsNumber}} article</p>
+        <p *ngIf="basketItemsNumber > 1">Panier: {{basketItemsNumber}} articles</p>
       </button></div>
     <div id="searchBar">
       <form [formGroup]="searchForm" (ngSubmit)="searchTimbre()">
