--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-header>
 </app-header>
 <div class="d-flex">
-  <app-sidebar
-    *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel') && !location.isCurrentPathEqualTo('/register')">
+  <app-sidebar *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel')">
   </app-sidebar>
   <router-outlet></router-outlet>
   <app-basket></app-basket>
