--- a/src/app/components/timbre-list/timbre-list.component.html
+++ b/src/app/components/timbre-list/timbre-list.component.html
@@ -75,14 +75,22 @@
     <img class="focusedStampImg" src="{{selectedTimbre.imageTimbreUrl}}">
   </div>
   <div class="d-flex justify-content-center" *ngIf="selectedTimbre.quantiteTimbre !==0">
-    <button type="button" class="addBasketButton" (click)="addToBasket(selectedTimbre)">
-      <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="bi bi-bag-plus-fill" fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg">
+    <button [ngClass]="{'confirmBasketBtn': basketConfirmation}" type="button" class="addBasketButton"
+      (click)="addToBasket(selectedTimbre)">
+      <svg *ngIf="!basketConfirmation" width="1.3em" height="1.3em" viewBox="0 0 16 16" class="bi bi-bag-plus-fill"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd"
           d="M5.5 3.5a2.5 2.5 0 0 1 5 0V4h-5v-.5zm6 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zM8.5 8a.5.5 0 0 0-1 0v1.5H6a.5.5 0 0 0 0 1h1.5V12a.5.5 0 0 0 1 0v-1.5H10a.5.5 0 0 0 0-1H8.5V8z" />
       </svg>
-      <span>AJOUTER AU PANIER</span>
+      <span *ngIf="!basketConfirmation">AJOUTER AU PANIER</span>
+      <svg *ngIf="basketConfirmation" width="1.3em" height="1.3em" viewBox="0 0 16 16" class="bi bi-bag-check-fill"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M5.5 3.5a2.5 2.5 0 0 1 5 0V4h-5v-.5zm6 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zm-.646 5.354a.5.5 0 0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z" />
+      </svg>
+      <span *ngIf="basketConfirmation">AJOUTÉ</span>
     </button>
   </div>
   <div class="text-center" *ngIf="selectedTimbre.quantiteTimbre ===0">Timbre Épuisé</div>
+  <!-- <p-messages [(value)]="basketMsg"></p-messages> -->
 </p-dialog>
