--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,9 @@
 #headerContent {
   background-color: #226089;
 }
+button {
+  outline: none;
+}
 
 #headerLogo {
   width: 8em;
@@ -58,11 +61,14 @@
   color: white;
   text-decoration: none;
 }
+.buttonDiv {
+  width: 10.5em;
+}
 #basket-button {
   background-color: transparent;
   border: none;
   color: white;
 }
 #basket-button p {
-  margin: 0.3rem 0 1rem 0.4rem;
+  margin: 0.15rem 0 0 0;
 }
