--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -14,10 +14,10 @@
         <td>
           <div class=" qtés d-flex justify-content-between">
             <button [disabled]="1>=timbre.quantite" class="qteBtn d-flex align-items-center" type="button"
-              (click)='adjustQuantity(timbre, "-")'><span>-</span></button>
+              (click)='adjustQuantity(timbre, "minus")'><span>-</span></button>
             <div class="qte">{{timbre.quantite}}</div>
             <button class="qteBtn d-flex align-items-center" type="button"
-              (click)='adjustQuantity(timbre,"+")'><span>+</span></button>
+              (click)='adjustQuantity(timbre,"plus")'><span>+</span></button>
           </div>
         </td>
         <td>
@@ -55,12 +55,14 @@
     <button id="cancelBtn" [disabled]="basketList.length===0" (click)="displayEmptyBasket=true" type="button"
       class="basketBtn">Vider le
       panier</button>
-    <button id="okBtn" [disabled]="basketList.length===0" (click)="mailContructionTest()" type="button"
+    <button id="okBtn" [disabled]="basketList.length===0" (click)="displayDevisModal= true" type="button"
       class="basketBtn">Envoyer pour
       devis</button>
   </div>
 </p-sidebar>
 
+
+<!-- Modal pour l'affichage de l'image du timbre -->
 <p-dialog [dismissableMask]="true" [modal]="true" header="Timbre N°{{selectedTimbre.numeroTimbre}}"
   [(visible)]="displayTimbreModal">
   <div class="d-flex justify-content-center">
@@ -69,7 +71,8 @@
 </p-dialog>
 
 
-<p-dialog id="test" [(visible)]="displayEmptyBasket">
+<!-- Modal confirmation vidage panier -->
+<p-dialog id="EmptyBasketModal" class="textModal" [(visible)]="displayEmptyBasket">
   <p-header>
     Suppression panier
   </p-header>
@@ -82,5 +85,55 @@
       <button id="cancelEmptyBtn" (click)="displayEmptyBasket = false" type="button" class="basketBtn">Non</button>
       <button id="okEmptyBtn" (click)="emptyBasket()" type="button" class="basketBtn">Oui</button>
     </div>
+  </p-footer>
+</p-dialog>
+
+<!-- Modal envoi devis -->
+<p-dialog id="SendMailModal" class="textModal" [(visible)]="displayDevisModal">
+  <p-header>
+    Envoi devis
+  </p-header>
+  <div class="px-4 pt-2 pb-4">
+    <p>Choisissez "<span class="font-weight-bold">Ouvrir dans Mails</span>" pour ouvrir la boîte mail sur votre
+      ordinateur et avoir le mail prérempli.</p>
+    <p>Choisissez "<span class="font-weight-bold">Récupérer la liste</span>" si vous souhaitez juste récupérer la
+      liste et envoyer le mail par vos propres
+      moyens.</p>
+    <p>Merci de votre confiance. Je vous contacterai bientôt afin de confirmer votre devis.</p>
+    <p class="font-weight-bold" style="color:rgb(185, 38, 38)">Attention: Une fois votre choix fait, vote panier sera
+      réinitialisé.</p>
+  </div>
+
+  <p-footer>
+    <div class="d-flex">
+      <button id="getListBtn" (click)="constructBasketList()" type="button" class="basketBtn">Récupérer la
+        liste</button>
+      <button id="openMailBtn" (click)="mailContruction()" type="button" class="basketBtn">Ouvrir dans Mails</button>
+    </div>
+  </p-footer>
+</p-dialog>
+
+
+<!-- MODAL LISTE POUR ENVOI MANUEL -->
+<p-dialog modal="true" closable="false" id="ShowBasketListModal" [(visible)]="displayBasketList">
+  <p-header>
+    Envoi devis manuel
+  </p-header>
+  <div class="px-4">
+    <p class="mb-0">Intégrez cette liste dans votre mail:</p>
+    <div class="listForManualMail d-flex justify-content-between font-weight-lighter">
+      {{basketDevisList}}
+
+      <!-- <textarea pInputTextarea autoResize="autoResize" #devisList class="text-wrap mb-0">{{basketDevisList}}</textarea> -->
+      <!-- <div id="copyBtnDiv"><button id="copyBtn" (click)="copyInputMessage(devisList)" class="btn btn-sm"
+          type="button">Copier</button></div> -->
+    </div>
+    <p><span class="font-weight-bolder">Attention:</span> Copiez bien cette liste ! Votre panier va être réinitialisé et
+      ne contiendra
+      plus vos timbres.</p>
+  </div>
+
+  <p-footer class="d-flex justify-content-center">
+    <button id="closeBasketListModal" (click)="cleanAfterDevis()" type="button">Terminer</button>
   </p-footer>
 </p-dialog>
