ajout d'un compteur de visiteurs

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,13 +3,11 @@
     <h4>Présentation du site</h4>
   </div>
   <div class="content">
-    <p>Vous trouverez dans ces pages une partie des timbres que je mets en vente (photos non contractuelles).
-    <p>
+    <p>Vous trouverez dans ces pages une partie des timbres que je mets en vente (photos non contractuelles).</p>
     <p>Les timbres sont vendus <strong>jusqu'à 80 % de remise</strong> sur la côte Yvert et Tellier.</p>
 
     <p>Les timbres neufs avec gomme altérée, avec charnière ou 2ème choix sont repérés par <strong>*</strong> après le
-      numéro du timbre.
-    </p>
+      numéro du timbre.</p>
     <p>Les timbres neufs sans gomme sont repérés par <strong>sg</strong> après le numéro du timbre.</p>
 
     <p>Pour tout renseignement vous pouvez m'écrire en cliquant sur <a
@@ -39,5 +37,22 @@
     <p>Pour la France, les frais de port au 01/01/20 sont de 1,90€ (envoi simple), 2,39€ (lettre suivie) ou 5,50€
       (recommandé) à préciser lors de votre commande.</p>
     <p>Je décline toute responsabilité quant à l'envoi en tarif courrier</p>
+  </div>
+</div>
+
+<div class="bloc">
+  <div class="title d-flex align-items-center justify-content-center">
+    <h4>Nouveautés</h4>
+  </div>
+  <div class="content">
+    <p>Visitez régulièrement le site afin de découvrir toutes les nouveautés.</p>
+    <p>Page oblitérés mise à jour le 10/09/20</p>
+    <p>Pages 7, 8, 9, 10, 11, 12, 13, 16 mises à jour le 14/04/20 Page 1 mise à jour le 04/01/20</p>
+    <p>Page 2 mise à jour le 06/01/20</p>
+    <br />
+    <p>NOUVEAUTÉ:</p>
+    <p>Bientôt mise en vente de timbres de Polynésie Française. Si vous êtes intêressé, n'hésitez pas en m'envoyer un
+      mail, je
+      vous préviendrai de la mise à disposition de la page.</p>
   </div>
 </div>
