--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -31,5 +31,6 @@
     <a routerLink="/timbres" [queryParams]="{category:'obl'}"
       class="list-group-item list-group-item-action">Oblitérés</a>
     <a routerLink="#" class="list-group-item list-group-item-action">Sites à visiter</a>
+    <p>Nombre de visiteurs: {{totalVisits.visitCount}}</p>
   </div>
 </div>
