adding new devis method

--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -67,11 +67,11 @@ button:focus {
 .img {
   max-height: 2rem;
 }
-.invisible-button {
+/* .invisible-button {
   padding: 0;
   border: none;
   background: none;
-}
+} */
 
 .buttons {
   height: 6.4%;
