--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <app-header>
 </app-header>
 <div class="d-flex">
-  <app-sidebar *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel')">
+  <app-sidebar
+    *ngIf="!location.isCurrentPathEqualTo('/admin') && !location.isCurrentPathEqualTo('/adminpanel')&& !location.isCurrentPathEqualTo('/devis')&& !location.isCurrentPathEqualTo('/merci')">
   </app-sidebar>
-  <router-outlet></router-outlet>
+  <router-outlet (activate)="isLoading=false"></router-outlet>
   <app-basket></app-basket>
   <app-arrow-to-top></app-arrow-to-top>
   <app-toast></app-toast>
+  <app-loading *ngIf="isLoading"></app-loading>
 </div>
 <app-footer></app-footer>
