--- a/src/app/components/merci/merci.component.html
+++ b/src/app/components/merci/merci.component.html
@@ -4,6 +4,8 @@
     <h5>Si votre email a correctement été renseigné, je vous recontacterai dans les jours à venir afin de confirmer ou
       non
       le devis.</h5>
+    <p>Un mail de confirmation vous a été envoyé. S'il n'apparaît pas, pensez à consulter vos courriers indésirables.
+    </p>
     <p>Pour rappel: N'envoyez pas le paiement avant confirmation du devis. </p>
     <button type="button" routerLink="/" id="accueilBtn">Retour à l'accueil</button>
   </div>
