delete disabled on button

--- a/src/app/components/devis-confirmation/devis-confirmation.component.html
+++ b/src/app/components/devis-confirmation/devis-confirmation.component.html
@@ -79,7 +79,7 @@
           <span class="font-weight-bold align-self-center">Total</span>
           <span class="font-weight-bold" id="totalPrice">{{totalArticles+livraison.prix|number:'1.2'}}€</span>
         </div>
-        <button disabled="" id="sendBtn" type="button" (click)='sendDevis()'>ENVOYER LE DEVIS</button>
+        <button id="sendBtn" type="button" (click)='sendDevis()'>ENVOYER LE DEVIS</button>
       </div>
     </div>
   </div>
