--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -32,8 +32,13 @@
         </td>
         <td>{{timbre.prixTimbre}}€</td>
         <td><button type="button" (click)="deleteTimbreFromBasket(timbre)" class="deleteBtn btn btn-outline-danger">
-            <p>x</p>
-          </button>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+              <path fill-rule="evenodd"
+                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+            </svg> </button>
         </td>
       </tr>
     </ng-template>
@@ -48,9 +53,9 @@
     <button id="cancelBtn" [disabled]="basketList.length===0" (click)="displayEmptyBasket=true" type="button"
       class="basketBtn">Vider le
       panier</button>
-    <button id="okBtn" [disabled]="basketList.length===0" routerLink="/devis" type="button" class="basketBtn">Envoyer
-      pour
-      devis</button>
+    <button id="okBtn" [disabled]="basketList.length===0" routerLink="/commande" type="button" class="basketBtn">Valider
+      la
+      commande</button>
   </div>
 </p-sidebar>
 
