--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,30 +1,29 @@
 #headerContent {
+  padding: 1em;
   background-color: #226089;
 }
-button {
+button,
+input {
   outline: none;
 }
 
-#headerLogo {
-  width: 8em;
-  margin: 1em;
-}
+#headerLogo,
 .widgets {
-  margin: 1em 0.8em 1em 0;
+  height: 7em;
 }
 
 .searchBar input {
   border: none;
-  /* font-size: 16px; */
-  width: 8em;
-  height: 2em;
+  width: 12em;
+  height: 2.4em;
   border-radius: 10px 0 0 10px;
+  padding-left: 1em;
   background-color: #e2e2e2;
   text-align: left;
 }
 
 .searchBtn {
-  height: 2em;
+  height: 2.4em;
   border: none;
   border-radius: 0 10px 10px 0;
   color: white;
