--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,11 +6,11 @@
     <div class="inputs d-flex flex-column align-items-center justify-content-center">
       <div class="form-group ">
         <label for="emailInput">Email</label>
-        <input id="emailInput" type="text" class="form-control" formControlName="email">
+        <input id="emailInput" type="text" class="form-control" formControlName="email" autocomplete="username">
       </div>
       <div class="form-group">
         <label>Mot de passe</label>
-        <input type="password" class="form-control" formControlName="pwd">
+        <input type="password" class="form-control" formControlName="pwd" autocomplete="current-password">
       </div>
       <p *ngIf="error !== null" class="m-0 erreur">{{error}}</p>
 
