--- a/src/app/components/timbre-list/timbre-list.component.css
+++ b/src/app/components/timbre-list/timbre-list.component.css
@@ -2,6 +2,13 @@
   width: 100%;
 }
 
+::ng-deep .p-dialog-header-close-icon {
+  color: white;
+  background-color: rgb(250, 87, 87);
+  border-radius: 15px;
+  padding: 0.2em;
+}
+
 .filters {
   padding: 0.5% 0;
   font-size: 0.8em;
