--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div id="headerContent" class="d-flex justify-content-between align-items-end">
   <div class="logo">
     <a routerLink="/">
-      <img id="headerLogo" src="../../../assets/img/logo_white.png">
+      <img id="headerLogo" src="../../../assets/img/logo.png">
     </a>
   </div>
   <!-- SEARCHBAR -->
