--- a/src/app/components/four-o-four/four-o-four.component.html
+++ b/src/app/components/four-o-four/four-o-four.component.html
@@ -1,1 +1,1 @@
-<p class="text-center">La page n'exsite pas (plus? C'est un mystère..).</p>
+<p class="text-center">La page n'existe pas (plus? C'est un mystère..).</p>
